chat-app-docker-k8s/k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: chat-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend
        image: akshaychhallare/chat-backend:v2
        ports:
        - containerPort: 5000
        volumeMounts:
        - mountPath: /data
          name: chat-storage
      volumes:
      - name: chat-storage
        persistentVolumeClaim:
          claimName: chat-pvc
